--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.16.2",
+    "better-scroll": "^1.2.6",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mint-ui": "^2.2.9",
     "moment": "^2.18.1",
     "qs": "^6.5.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.0"
